# shutdown

./: README.md  shutdown.sln
NtQueryNameWorker/: NtQueryNameServer.cs  NtQueryNameWorker.csproj
ProcessSignaler/: ProcessSignaler.csproj  Program.cs
ShutdownAbortMonitor/: Program.cs
native/shellcode/: CMakeLists.txt  shellcode.S
shutdown/: AppSettings.json  DisposableMemoryExtensions.cs  IAction.cs  INtQueryNameWorker.cs  MemoryNative.cs  NtQueryNameIpc.cs  NtQueryNameNative.cs  NtQueryNameWorker.cs  NtQueryNameWorkerFactory.cs  NtSyscallWorker.cs  ProcessUtil.cs  ShutDownActions.cs  ShutdownActionFactories.cs  ShutdownActionsBuilder.cs  ShutdownOptions.cs  ShutdownService.cs  ShutdownState.cs  ShutdownTool.cs  ShutdownWatcher.cs  ShutdownWatcherService.cs  SyscallContext.cs  VirtualMemoryManager.cs  shutdown.csproj
shutdown/Components/: CloseOpenHandlesAction.cs  DismountVolumes.cs  LogoutIscsiAction.cs  ProcessKiller.cs  ProcessKillerAction.cs  ShutdownVirtualMachines.cs  SyncBuffers.cs
shutdown/Components/ProcessKiller/: IProcessKiller.cs  ProcessKillerBase.cs
shutdown/Components/ProcessKiller/Modules/: ArsenalImageMounter.cs  GenericSaveDialogKiller.cs  IdaKiller.cs
shutdown/Properties/: launchSettings.json
shutdownLib/: DisposableMemoryExtensions.cs  ElevationService.cs  HandleExtensions.cs  Helpers.cs  NativeMethods.txt  Ntdll.cs  ProcessUtil.cs  SafeNtHandle.cs  ShutdownGlobals.cs  Win32.cs  WtsMemoryManager.cs  shutdownLib.csproj
